# cariad-cpp-aufbau-juni-2023

./: .gitignore
ArrayFiller/: CMakeLists.txt  main.cpp
ArrayFiller/src/bootstrap/: application_starter.h
ArrayFiller/src/client/: array_client.h
ArrayFiller/src/container/: array_factory.h
ArrayFiller/src/container/parallel/: array_factory_parallel_impl.h
ArrayFiller/src/container/sequential/: array_factory_sequencial_impl.h
ArrayFiller/src/generators/: generator.h  number_generator.h  number_generator_factory.h
ArrayFiller/src/generators/random/: mersenne_twister_number_generator.h  mersenne_twister_number_generator_factory.h
ArrayFiller/src/time/: decorator.h  stopwatch.h  stopwatch_impl.h
FakeDemo/: my_service_using_dependency.h
FakeDemo/tests/: CMakeLists.txt  globaltest.cpp  myservice_using_dependency_test.cpp
NimSpielProjekt/: CMakeLists.txt  main.cpp
NimSpielProjekt/client/: GameClient.h
NimSpielProjekt/game/: abstract_game.h  game.h
NimSpielProjekt/game/NimGame/: nim_game_impl.h
NimSpielProjekt/game/NimGame/player/: abstract_nim_game_player.h  computer_player.h  human_player.h
NimSpielProjekt/game/player/: abstract_game_player.h  player.h
NimSpielProjekt/io/: ConsoleWriter.h  Writer.h
NimSpielProjekt/tests/: CMakeLists.txt
NimSpielProjekt/tests/game/: DummyClassesForTest.h  Mockplayer.h  Mockwriter.h  MyAbstractGameDummy.h  abstract_game_test.cpp  abstract_game_test.h
ParameterTestProjekt/: CMakeLists.txt
ParameterTestProjekt/source/games/take_game/players/: computer_player.h
ParameterTestProjekt/tests/: CMakeLists.txt
ParameterTestProjekt/tests/games/take_game/players/: MockWriter.h  computer_player_test.cpp  computer_player_test.h
PersonenServiceProjekt/: CMakeLists.txt
PersonenServiceProjekt/source/persistence/: person.h  personen_repository.h
PersonenServiceProjekt/source/services/: blacklist_service.h  personen_service_impl.h
PersonenServiceProjekt/tests/: CMakeLists.txt  Mockblacklist_service.h  Mockpersonen_repository.h
PersonenServiceProjekt/tests/google/googlemock/include/gmock/: gmock-spec-builders.h
PersonenServiceProjekt/tests/services/: personen_service_impl_test.cpp  personen_service_impl_test.h
Tag1_01StapelProjekt/: CMakeLists.txt
Tag1_01StapelProjekt/source/collections/: Stapel.cpp  Stapel.h  StapelException.h
Tag1_01StapelProjekt/tests/: CMakeLists.txt
Tag1_01StapelProjekt/tests/collections/: StapelTest.cpp  StapelTest.h
Tag1_02Schwein/: CMakeLists.txt
Tag1_02Schwein/source/: Schwein.h
Tag1_02Schwein/tests/: CMakeLists.txt  SchweinTest.cpp  SchweinTest.h
Tag1_03Mockdemo/: CMakeLists.txt
Tag1_03Mockdemo/source/: DemoDepenency.h  Dependency.h  DependencyImpl.cpp  DependencyImpl.h  MyServiceUsingDependency.h  main.cpp
Tag1_03Mockdemo/tests/: CMakeLists.txt  MockDependency.h  MyServiceUsingDepengencyTest.cpp  MyServiceUsingDepengencyTest.h
TddDemo/: CMakeLists.txt
TddDemo/source/: Stapel.h
TddDemo/tests/: CMakeLists.txt  StapelTest.cpp  StapelTest.h
interface-segregation-event/src/de/clientside/: Main.java
interface-segregation-gui/src/de/limago/: Fenster.java
